Retrait code en commentaire + ajout jauge taille max pour msg diffuse